@@ -1,3 +1,9 @@
+2011-02-25  Alejandro G. Castro  <alex@igalia.com>
+
+        Fix GTK compilation after r79654.
+
+        * GNUmakefile.am:
+
 2011-02-24  Brian Weinstein  <bweinstein@apple.com>
 
         Qt build fix.
